GNOME Bugzilla – Bug 683937
Wrong format identifiers in debug messages in clutter_stage_allocate()
Last modified: 2012-09-13 11:20:56 UTC
The debug messages expects that width and height are integer while they're floats. The attached patch fixes them (and also a typo in one of the notes).
Created attachment 224207 [details] [review] stage: fix typo and format identifiers in debug notes
Review of attachment 224207 [details] [review]: obviously correct
The following fix has been pushed: 1658710 stage: fix typo and format identifiers in debug notes
Created attachment 224213 [details] [review] stage: fix typo and format identifiers in debug notes