stage: fix typo and format identifiers in debug notes

https://bugzilla.gnome.org/show_bug.cgi?id=683937